--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- Navigation container-->
     <div class="container-fluid nav1">
         <div class="row">
             <div class="col-md-12">
@@ -31,7 +32,7 @@
             </div>
         </div>
     </div>
-   
+   <!-- Main container-->
     <div class="container content">
         <div class="row text-center">
             <div class="col-md-12">
@@ -40,6 +41,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+                <!--form container-->
                 <form>
                     <div class="form-group">
                         <label for="nameInput">Name</label>
@@ -58,12 +60,11 @@
             </div>
         </div>
     </div>
-
+<!--footer for page-->
     <footer>
         <p> Copyright &copy;</p>
     </footer>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
