--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <h2>Bio</h2>
             </div>
         </div>
+        <!-- container for text and image-->
         <div class="row-fluid">
             <article class="row single-post mt-2 no-gutters">
                 <div class="col-md-12">
@@ -63,6 +64,7 @@
             </article>
         </div>
     </div>
+    <!--footer for page-->
     <footer>
         <p> Copyright &copy;</p>
     </footer>
