--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--container for navbar-->
     <div class="container-fluid nav1">
         <div class="row">
             <div class="col-md-12">
@@ -31,7 +32,7 @@
             </div>
         </div>
     </div>
-
+<!--Main container-->
     <div class="container content">
         <div class="row ">
             <div class="col-md-12">
@@ -42,7 +43,7 @@
                 <div class="col-md-12">
                     <!-- <div class="PortfolioSec"> -->
                         <div class="row ">
-                        <!-- Indivisualized boxes for portfolio. Couldn't get my spacing on the boxes as id like. Looks kinda right lol. Definately challanging section-->
+                        <!-- Indivisualized boxes for portfolio-->
                         <div class="col-md-6 minibox">
                                 <img class="Pictures" src="images/Hangman.jpg" alt="Hangman">
                                     <div class="titlepic">
@@ -79,12 +80,10 @@
         </div>
     </div>
     </div>
-   
+   <!--footer for page-->
     <footer>
         <p> Copyright &copy;</p>
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
