--- a/portfolio.html
+++ b/portfolio.html
@@ -45,33 +45,35 @@
                         <div class="row ">
                         <!-- Indivisualized boxes for portfolio-->
                         <div class="col-md-6 minibox">
-                                <img class="Pictures" src="images/Hangman.jpg" alt="Hangman">
-                                    <div class="titlepic">
+                            <a href = "../Hangman-Game/index.html"><img class="Pictures" src="images/Hangman.jpg" alt="Hangman"></a>
+                                <div class="titlepic">
                                     Hangman
                                 </div>
                             </div>
                            
                         <div class="col-md-6 minibox">
-                                <img class="Pictures" src="images/rpg game.jpg" alt="RPG Game">
+                            <a href="../GiphyPage/index.html"><img class="Pictures" src="images/rpg game.jpg" alt="Giphy Game"></a>
                                     <div class="titlepic">
-                                    RPG
+                                    Giphy Page
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                         <div class="col-md-6 minibox">
-                            <img class="Pictures" src="images/That Trivia game.png" alt="Trivia Game">
+                            <a href = "../TriviaGame/index.html"><img class="Pictures" src="images/That Trivia game.png" alt="Trivia Game"></a>
                             <div class="titlepic">Trivia Game</div>
                         </div>
                         <div class="col-md-6 col-sm-12 minibox">
-                            <img class="Pictures" src="images/rudgers widget pic.jpg" alt="Rudger info Widget">
-                            <div class="titlepic">Rutgers Info Widget</div>
+                            <a href = "../TrainStop/index.html">
+                            <img class="Pictures" src="images/rudgers widget pic.jpg" alt="Train Stop"></a>
+                            <div class="titlepic">Train Stop</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 minibox">
-                            <img class="Pictures" src="images/rock paper scissors.jpg" alt="Rock Paper Scissors">
-                            <div class="titlepic">Rock Paper Scissors</div>
+                            <a href ="../unit-4-game/index.html">
+                            <img class="Pictures" src="images/rock paper scissors.jpg" alt="Gems Game"></a>
+                            <div class="titlepic">Gems Game</div>
                         </div>
                     </div>
                 </div>
