--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                             </div>
                            
                         <div class="col-md-6 minibox">
-                            <a href="../GiphyPage/index.html"><img class="Pictures" src="images/rpg game.jpg" alt="Giphy Game"></a>
+                            <a href="../GiphyPage/index.html"><img class="Pictures" src="images/giphy_logo_square_social.png" alt="Giphy Game"></a>
                                     <div class="titlepic">
                                     Giphy Page
                                 </div>
@@ -65,14 +65,14 @@
                         </div>
                         <div class="col-md-6 col-sm-12 minibox">
                             <a href = "../TrainStop/index.html">
-                            <img class="Pictures" src="images/rudgers widget pic.jpg" alt="Train Stop"></a>
+                            <img class="Pictures" src="images/shortest-passenger-train.jpg" alt="Train Stop"></a>
                             <div class="titlepic">Train Stop</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 minibox">
                             <a href ="../unit-4-game/index.html">
-                            <img class="Pictures" src="images/rock paper scissors.jpg" alt="Gems Game"></a>
+                            <img class="Pictures" src="images/gems.jpg" alt="Gems Game"></a>
                             <div class="titlepic">Gems Game</div>
                         </div>
                     </div>
