--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,12 @@
             <div class="col-md-12">
                 <h2>Portfolio</h2>
             </div>
-            <div class= "container text-center">
-            <div class="row portfolioPics">
-                <div class="col-md-12">
+        </div>
+            <!-- <div class= "container text-center"> -->
+            <!-- <div class="row portfolioPics">
+                <div class="col-md-12"> -->
                     <!-- <div class="PortfolioSec"> -->
-                        <div class="row ">
+                        <div class="row portfolioPics">
                         <!-- Indivisualized boxes for portfolio-->
                         <div class="col-md-6 minibox">
                             <a href = "../Hangman-Game/index.html"><img class="Pictures" src="images/Hangman.jpg" alt="Hangman"></a>
@@ -58,7 +59,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row portfolioPics">
                         <div class="col-md-6 minibox">
                             <a href = "../TriviaGame/index.html"><img class="Pictures" src="images/That Trivia game.png" alt="Trivia Game"></a>
                             <div class="titlepic">Trivia Game</div>
@@ -69,17 +70,17 @@
                             <div class="titlepic">Train Stop</div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row portfolioPics">
                         <div class="col-md-6 minibox">
                             <a href ="../unit-4-game/index.html">
                             <img class="Pictures" src="images/gems.jpg" alt="Gems Game"></a>
                             <div class="titlepic">Gems Game</div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        </div>
+                <!-- </div>
+            </div> -->
+        <!-- </div> -->
+        <!-- </div> -->
     </div>
     </div>
    <!--footer for page-->
