--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,66 +32,88 @@
             </div>
         </div>
     </div>
-<!--Main container-->
+    <!--Main container-->
     <div class="container content">
         <div class="row ">
             <div class="col-md-12">
                 <h2>Portfolio</h2>
             </div>
         </div>
-            <!-- <div class= "container text-center"> -->
-            <!-- <div class="row portfolioPics">
+        <!-- <div class= "container text-center"> -->
+        <!-- <div class="row portfolioPics">
                 <div class="col-md-12"> -->
-                    <!-- <div class="PortfolioSec"> -->
-                        <div class="row portfolioPics">
-                        <!-- Indivisualized boxes for portfolio-->
-                        <div class="col-md-6 minibox">
-                            <a href = "../Hangman-Game/index.html"><img class="Pictures" src="images/Hangman.jpg" alt="Hangman"></a>
-                                <div class="titlepic">
-                                    Hangman
-                                </div>
-                            </div>
-                           
-                        <div class="col-md-6 minibox">
-                            <a href="../GiphyPage/index.html"><img class="Pictures" src="images/giphy_logo_square_social.png" alt="Giphy Game"></a>
-                                    <div class="titlepic">
-                                    Giphy Page
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row portfolioPics">
-                        <div class="col-md-6 minibox">
-                            <a href = "../TriviaGame/index.html"><img class="Pictures" src="images/That Trivia game.png" alt="Trivia Game"></a>
-                            <div class="titlepic">Trivia Game</div>
-                        </div>
-                        <div class="col-md-6 col-sm-12 minibox">
-                            <a href = "../TrainStop/index.html">
-                            <img class="Pictures" src="images/shortest-passenger-train.jpg" alt="Train Stop"></a>
-                            <div class="titlepic">Train Stop</div>
-                        </div>
-                    </div>
-                    <div class="row portfolioPics">
-                        <div class="col-md-6 minibox">
-                            <a href ="../unit-4-game/index.html">
-                            <img class="Pictures" src="images/gems.jpg" alt="Gems Game"></a>
-                            <div class="titlepic">Gems Game</div>
-                        </div>
-                    </div>
-                <!-- </div>
+        <!-- <div class="PortfolioSec"> -->
+        <div class="row portfolioPics">
+            <!-- Indivisualized boxes for portfolio-->
+            <div class="col-md-6 minibox">
+                <a href="../Hangman-Game/index.html"><img class="Pictures" src="images/Hangman.jpg" alt="Hangman"></a>
+                <div class="titlepic">
+                    Hangman
+                </div>
+            </div>
+
+            <div class="col-md-6 minibox">
+                <a href="../GiphyPage/index.html"><img class="Pictures" src="images/giphy_logo_square_social.png"
+                        alt="Giphy Game"></a>
+                <div class="titlepic">
+                    Giphy Page
+                </div>
+            </div>
+        </div>
+        <div class="row portfolioPics">
+            <div class="col-md-6 minibox">
+                <a href="../TriviaGame/index.html"><img class="Pictures" src="images/That Trivia game.png"
+                        alt="Trivia Game"></a>
+                <div class="titlepic">Trivia Game</div>
+            </div>
+            <div class="col-md-6 col-sm-12 minibox">
+                <a href="../TrainStop/index.html">
+                    <img class="Pictures" src="images/shortest-passenger-train.jpg" alt="Train Stop"></a>
+                <div class="titlepic">Train Stop</div>
+            </div>
+        </div>
+        <div class="row portfolioPics">
+            <div class="col-md-6 minibox">
+                <a href="../unit-4-game/index.html">
+                    <img class="Pictures" src="images/soccerField2.jpg" alt="soccer field"></a>
+                <div class="titlepic">Argentinian Gems Game</div>
+            </div>
+            <div class="col-md-6 minibox">
+                <a href="../Inclass-Activity-Project1/loginPage.html">
+                    <img class="Pictures" src="images/datenightApp.png" alt="pink app"></a>
+                <div class="titlepic">Date Night:Project 1</div>
+            </div>
+        </div>
+        <div class="row portfolioPics">
+            <div class="col-md-6 minibox">
+                <a href="https://github.com/facurodri/liri-node-app">
+                    <img class="Pictures" src="images/keyboard.jpg" alt="cartoon computer"></a>
+                <div class="titlepic">Liri App</div>
+            </div>
+            <div class="col-md-6 minibox">
+                <a href="https://github.com/facurodri/Bamazon">
+                    <img class="Pictures" src="images/bamazon.jpg" alt="sticker"></a>
+                <div class="titlepic">Bamazon</div>
+            </div>
+        </div>
+        <!-- </div>
             </div> -->
         <!-- </div> -->
         <!-- </div> -->
     </div>
     </div>
-   <!--footer for page-->
+    <!--footer for page-->
     <footer>
         <p> Copyright &copy;</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
 
