added last 2 projects to page

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,7 @@
                 </div>
             </div>
         </div>
+        <br>
         <div class="row portfolioPics">
             <div class="col-md-6 minibox">
                 <a href="../TriviaGame/index.html"><img class="Pictures" src="images/That Trivia game.png"
@@ -72,6 +73,7 @@
                 <div class="titlepic">Train Stop</div>
             </div>
         </div>
+        <br>
         <div class="row portfolioPics">
             <div class="col-md-6 minibox">
                 <a href="../unit-4-game/index.html">
@@ -84,6 +86,7 @@
                 <div class="titlepic">Date Night:Project 1</div>
             </div>
         </div>
+        <br>
         <div class="row portfolioPics">
             <div class="col-md-6 minibox">
                 <a href="https://github.com/facurodri/liri-node-app">
@@ -96,10 +99,20 @@
                 <div class="titlepic">Bamazon</div>
             </div>
         </div>
-        <!-- </div>
-            </div> -->
-        <!-- </div> -->
-        <!-- </div> -->
+        <br>
+        <div class="row portfolioPics">
+            <div class="col-md-6 minibox">
+                <a href="https://github.com/facurodri/FriendFinder">
+                    <img class="Pictures" src="images/Friends.jfif" alt="Friends jumping"></a>
+                <div class="titlepic">Friend Finder</div>
+            </div>
+            <div class="col-md-6 minibox">
+                <a href="https://github.com/facurodri/Burger">
+                    <img class="Pictures" src="images/burger.jpg" alt=""></a>
+                <div class="titlepic">Burger App</div>
+            </div>
+        </div>
+
     </div>
     </div>
     <!--footer for page-->
