changed profile pics

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
         <div class="row portfolioPics">
             <div class="col-md-6 minibox">
                 <a href="https://github.com/facurodri/FriendFinder">
-                    <img class="Pictures" src="images/Friends.jfif" alt="Friends jumping"></a>
+                    <img class="Pictures" src="images/2019-05-03 (2).png" alt="Friends jumping"></a>
                 <div class="titlepic">Friend Finder</div>
             </div>
             <div class="col-md-6 minibox">
