--- a/portfolio.html
+++ b/portfolio.html
@@ -102,15 +102,23 @@
         <br>
         <div class="row portfolioPics">
             <div class="col-md-6 minibox">
-                <a href="https://github.com/facurodri/FriendFinder">
+                <a href="https://powerful-crag-67466.herokuapp.com/">
                     <img class="Pictures" src="images/2019-05-03 (2).png" alt="Friends jumping"></a>
                 <div class="titlepic">Friend Finder</div>
             </div>
             <div class="col-md-6 minibox">
-                <a href="https://github.com/facurodri/Burger">
+                <a href="https://obscure-taiga-96899.herokuapp.com/">
                     <img class="Pictures" src="images/burger.jpg" alt=""></a>
                 <div class="titlepic">Burger App</div>
             </div>
+        </div>
+        <div class="row portfolioPics">
+            <div class="col-md-6 minibox">
+                <a href="https://powerful-crag-67466.herokuapp.com/">
+                    <img class="Pictures" src="images/booth2.jpg" alt="confessional"></a>
+                <div class="titlepic">Confessions</div>
+            </div>
+            
         </div>
 
     </div>
